Add exercises for Java 21 and Java 22